--- a/css/main.css
+++ b/css/main.css
@@ -191,3 +191,18 @@ html {
 html,body{
     margin:0;
     }
+
+    .scrollbar {
+        overflow-y: scroll;
+        scroll-behavior: smooth
+      }
+      .scrollbar-primary {
+        scrollbar-color: #4285f4 #f5f5f5;
+      }
+      .scrollbar-primary::-webkit-scrollbar {
+      width: 12px;
+      background-color: #F5F5F5; }
+      
+      .scrollbar-primary::-webkit-scrollbar-thumb {
+      border-radius: 10px;
+      }
