--- a/css/main.css
+++ b/css/main.css
@@ -14,6 +14,10 @@ html {
     scroll-behavior: smooth;
   }
 
+  .belgrano {
+    font-family: 'Belgrano', serif;
+  }
+
 .bg-black {
     background-color: rgb(25,26,21);
 }
