--- a/css/main.css
+++ b/css/main.css
@@ -198,6 +198,27 @@ html {
     background-color: #FFFAF3;
 }
 
+.red {
+  background-color:red;
+}
+
+.parallax {
+   /* The image used */
+   background-image: url("/images/paralax.webp");
+   
+
+
+   /* Set a specific height */
+   min-height: 550px;
+   height: 100%;
+ 
+   /* Create the parallax scrolling effect */
+   background-attachment: fixed;
+   background-position: center;
+   background-repeat: no-repeat;
+   background-size: cover;
+}
+
 html,body{
     margin:0;
     }
@@ -222,7 +243,7 @@ html,body{
 .flip-card {
     background-color: transparent;
     width: 100%;
-    height: 10rem;
+    height: 11rem;
     
     /* border: 1px solid #f1f1f1; */
     perspective: 1000px; /* Remove this if you don't want the 3D effect */
@@ -297,9 +318,13 @@ html,body{
 
   @media (max-width: 600px)
   {
-    .adjustedHeight{
+    .adjustedHeight
+    {
       height:90vh !important;
       
-  }
+    }
+    
+
+
   }
  
