changed parallax for mobile to solid background

--- a/css/main.css
+++ b/css/main.css
@@ -323,7 +323,11 @@ html,body{
       height:90vh !important;
       
     }
-    
+    .parallax{
+      background-image: url("") !important;
+      background-color: rgb(25,26,21) !important;
+    }
+
 
 
   }
