changed to gold color on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -324,8 +324,9 @@ html,body{
       
     }
     .parallax{
-      background-image: url("/images/flag.WEBP") !important;
-      /* object-fit: cover; */
+      
+      background-color:#d6af55;
+     
       
 
     }
