changed parallax background color on mobile again

--- a/css/main.css
+++ b/css/main.css
@@ -324,11 +324,10 @@ html,body{
       
     }
     .parallax{
-      
-      background-color:#d6af55;
-     
-      
+      background-image: url("") !important;
+      background-color: rgb(25,26,21)! important;
 
     }
+   
   }
  
